# qenex-verifier

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.sha256  NOTICE  README.md  SUPPLEMENTARY.md  conftest.py  pyproject.toml  verify.sh
docs/: _body.md  _summary.md  _title.md  build_pdf.sh
examples/qlang/: accuracy_demo.ql  accuracy_stress_test.ql  addition_paradox.ql  ruthless_test.ql  ruthless_test_2.ql  vector_loss.ql
examples/qlang/legacy/: mp2_example.ql  pipe_test.ql  ruthless_test_2_revised.ql  ruthless_test_3.ql  uncertainty_trap.ql  universal_science_audit.ql  vector_multiplication_loss.ql
tests/: conftest.py  test_eomccsd.py  test_solvation.py  test_uccsd.py  test_vibrational.py
tests/validation/: conftest.py  test_boys_recurrence.py  test_bug_fix_eri.py  test_casscf.py  test_cbs.py  test_cc_pvdz_dft.py  test_cc_pvdz_energies.py  test_cc_pvdz_mp2.py  test_cc_pvtz.py  test_ccsd.py  test_cross_validation.py  test_edge_cases.py  test_eri.py  test_f.py  test_gradient.py  test_h2_dissoc.py  test_h2_opt.py  test_h_atom.py  test_he.py  test_hf_integrals.py  test_integrals.py  test_mp2.py  test_ne.py  test_nuc_att.py  test_o.py  test_p_kinetic.py  test_p_nuc.py  test_simple_kinetic.py  test_uhf_new.py
